# hnypt

./: .env-example  .gitignore  Cargo.toml  README.md  devenv.nix  docker-compose-mongo-only.yml
src/: db.rs  logger.rs  main.rs
src/db/: client.rs  mod.rs
src/logger/: mod.rs
src/manifests/services/: mongodb-nodeport.yaml  mongodb-service.yaml  rabbitmq-nodeport.yaml
src/pods_management/: mod.rs  pods_enums.rs  pods_setup.rs  pods_utils.rs  setup.rs  utils.rs
src/rabbitmq/: client.rs  mod.rs
src/services/: mongodb-service.json
src/services_management/: mod.rs  services_enums.rs  services_setup.rs  services_utils.rs
src/specs/services/: mongodb-service.json
