[package]
name = "hnypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
tokio = { version = "1.41.0", features = ["full"] }
anyhow = "1.0.92"
serde_yml = "0.0.12"
mongodb = "3.1.0"
once_cell = "1.20.2"
dotenv = "0.15.0"


